--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Speed Run</title>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
-
 </head>
 <body>
     <test-app>
         Loading...
     </test-app>
-    <script>System.import('app');
+    <script>
+    System.import('app');
 
 
     </script>
